src/app.scss
@import 'styles/styles.scss';

$footerBottomBackgroundColor: $black;
$footer-copywrite-color: #8E8E8E;

body {
  font-family: $primary-font-family, sans-serif;
  font-weight: 300;
  font-size: 1rem;
  margin: 0;
  padding: 0;
  height: 100%;
  min-height: 100vh;
  width: 100%;
  overflow-x: hidden;
  text-align: left;
  background-color: #1E1E1E;

  #root {

    & > .app-wrapper {
      width: 100vw;
      position: relative;
      display: flex;
      flex-direction: column;
      align-items: center;
      

      // page gutter
      & > .page-bottom-wrapper {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        width: 100vw;
        height: 48px;
        background-color: #000000;

        & > .page-bottom {
          display: flex;
          justify-content: space-between;
          align-items: center;
          width: 100%;
          max-width: 1200px;
          color: #8e8e8e;
          font-size: 0.6875rem;
          letter-spacing: 0.85px;
          line-height: 16px;

          & > .copyright {
              margin-left: 80px;
      
              @include phone {
                  margin: 0 auto;
              }
          }
          & > .legal {
              display: flex;
              flex-direction: row;
              @include desktop {
                margin-right: 0;
              }
              @include tablet {
                margin-right: 155px;
              }
              @include phone {
                display: none;
              }
  
              & a {
                color: inherit;
                text-decoration: none;
              }
              
              .terms {
                margin-right: 32px;
              }
          }
        }    
    
      }
    }
  }
}

// used within main pages
.content-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  position: relative;
  max-width: 1200px;
  margin: 0 auto;

  @include desktop {
      padding-top: 10em;
  }
  @include tablet {
      // margin-top: 25rem;
      // padding-top: 15%;
  }
  @include phone {
      // margin-top: 15rem;
      // padding-top: 20%;
  }
  
}

// .grid-wrapper {
//   max-width: 1200px;
//   display: grid;
//   grid-gap: 18.33px;
//   grid-template-columns: repeat(12, [col-start] 81.67px);
//   margin: 0 auto;

//   @include tablet {
//     grid-template-columns: repeat(12, [col-start] 45px);
//   }
//   @include phone {
//     grid-template-columns: repeat(12, [col-start] 10px);
//   }

//   & > * {
//     grid-column: col-start / span 12;
//   }
// }

